--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="gplus_button_corner">5dp</dimen>
+    <dimen name="gplus_left_height">32dp</dimen>
+    <dimen name="gplus_left_width">48dp</dimen>
+    <dimen name="gplus_left_inner_padding">8dp</dimen>
+    <dimen name="gplus_button_width">176dp</dimen>
+    <dimen name="gplus_font_size">16dp</dimen>
 </resources>
