--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -28,12 +28,12 @@
             android:layout_width="@dimen/gplus_left_width"
             android:layout_height="@dimen/gplus_left_height"
             android:background="@drawable/custom_left_drawable_temp_bg"
-            android:padding="@dimen/gplus_left_inner_padding"
+            android:padding="@dimen/gplus_inner_padding"
             android:src="@drawable/ic_gplus" />
 
         <TextView
             style="@style/social_button_style"
-            android:text="Sign Up via Google" />
+            android:text=" Sign Up via MantraLabs account " />
     </LinearLayout>
 
 </RelativeLayout>
