--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -29,6 +29,7 @@
                     android:src="@color/black" />
 
                 <TextView
+                    android:id="@+id/chat_group_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
