--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
     <color name="gplus_button_bg">#DD4B39</color>
+    <color name="bg_bubble_self">#E1E1E1</color>
 </resources>
